tests/kubernetes/graph/resources/Keyword/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
# This cluster role binding allows anyone in the "manager" group to read secrets in any namespace.
kind: ClusterRoleBinding
metadata:
  name: failing-crb1
subjects:
- kind: ServiceAccount
  name: service-account-name
  namespace: default
- kind: ServiceAccount
  name: service-account-name2
  namespace: default
roleRef:
  kind: ClusterRole
  name: failing-cr1
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccount: service-account-name
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: failing-cr1
rules:
- apiGroups: ["rbac.authorization.k8s.io"]
  resources: ["clusterrolebindings"]
  verbs: ["*"]
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: service-account-name
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: service-account-name2
