tests/kubernetes/graph/resources/Keyword/pod_service_account.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: prod
spec:
  serviceAccountName: over-privileged-sa2
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: failing-crb2
subjects:
- kind: ServiceAccount
  name: over-privileged-sa2
  namespace: prod
roleRef:
  kind: ClusterRole
  name: failing-cr2
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: failing-cr2
rules:
- apiGroups: ["rbac.authorization.k8s.io"]
  resources: ["*"]
  verbs: ["bind", "create"]
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: over-privileged-sa2
